compiler-core/src/type_/tests/snapshots/rakun_core__type___tests__errors__unknown_label.snap
---
source: compiler-core/src/type_/tests/errors.rs
expression: "record X { X(a: Int, b: Float) }\nfn x() {\n  let x = X(a: 1, c: 2.0)\n  x\n}"
---
----- SOURCE CODE
record X { X(a: Int, b: Float) }
fn x() {
  let x = X(a: 1, c: 2.0)
  x
}

----- ERROR
error: Unknown label
  ┌─ /src/one/two.rakun:3:19
  │
3 │   let x = X(a: 1, c: 2.0)
  │                   ^^^^^^ Did you mean `b`?

It accepts these labels:

    b
